k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: data-ingest
  labels:
    app.kubernetes.io/part-of: data-ingest-kafka-k8s
